[package]
name = "pendulum_simulator"
version = "0.1.0"
edition = "2021"
authors = ["Naoki Hori"]
description = "Energy-conserving N-body pendulum simulator"
repository = "https://github.com/NaokiHori/Pendulum"
publish = false
license-file = "LICENSE"

[lib]
name = "pendulum"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
explicit = []

[dependencies]
wasm-bindgen = { version = "0.2.95" }
