[package]
name = "wasm_wrapper"
version = "0.1.0"
authors = ["Naoki Hori"]
description = "wasm interface"
repository = "https://github.com/NaokiHori/MinimalCanvasExample"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
js-sys = { version = "0.3.67" }
web-sys = { version = "0.3.67", features = ["CanvasRenderingContext2d", "Document", "HtmlCanvasElement", "Window", ] }
wasm-bindgen = { version = "0.2.90" }
pendulum = { path = "../../" }
